Removed overflow from standout players section. Fixed some styling to look better when page is mobile (especially for field with footballers - but lot to fixed more as it already starts overflowing at 400px...)

--- a/src/style.css
+++ b/src/style.css
@@ -119,13 +119,15 @@ button:focus-visible {
 }
 
 .row-stat-item img {
-  max-width: 7rem;
+  max-width: 6rem;
 }
 
 .card {
   display: flex;
   gap: 1rem;
   padding: .5rem;
+
+  flex-wrap: wrap;
 
   border-radius: 1rem;
   background: 
